[package]
name = "sif-kdtree"
description = "simple, immutable, flat k-d tree"
version = "0.1.1"
edition = "2018"
rust-version = "1.55"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sif-kdtree"
repository = "https://github.com/adamreichold/sif-kdtree"
keywords = ["kdtree"]
categories = ["data-structures", "simulation", "science::geo"]

[dependencies]
rayon = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.1"

[package.metadata.docs.rs]
all-features = true
